<resources>
    <string name="select_file">选择文件</string>
    <style name="cancle_rec">取消接收</style>
    <string name="send_file1">发送文件列表：</string>
    <string name="null_name">null</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="app_name">DocumentExpress</string>
    <string name="action_settings">Settings</string>
    <string name="button_send_text">发送</string>
    <string name="button_recieve">接收</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="loading">正在连接...</string>
    <string name="trans_complete">任务完成</string>
    <string name="cancle">取消</string>
    <string name="transing">发送中...</string>
    <string name="cancle_trans">取消发送</string>
    <string name="send">发送</string>
    <string name="choosefile">选择文件</string>
    <string name="back">返回</string>
    <string name="app_title">文件快递</string>
    <string name="recing">接收中...</string>
    <string name="cancle_rec">取消接受</string>
    <string name="setting_file_dir">文件存储路径</string>
    <string name="setting_sound">声音</string>
    <string name="setting_express_mode">传输模式</string>
    <string name="setting_vibration">震动</string>
    <string name="vibration">震动</string>
    <string name="button_exit">退出</string>
</resources>
