<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="#33b5e5"
        android:layout_height="50dp">
        <LinearLayout
            android:id="@+id/cancle_file_filesendlayout"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="23dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/cancle"
                android:textColor="#fff"
                android:textSize="15sp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/trans_title"
            android:text="@string/recing"
            android:textColor="#fff"
            android:textSize="23sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="30dp"/>
    </RelativeLayout>
    <LinearLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <wfu.com.documentexpress.view.FlexiListView
            android:id="@+id/transing_filelist"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </wfu.com.documentexpress.view.FlexiListView>
    </LinearLayout>
    <Button
        android:id="@+id/interrupt_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/canclebutton_state_change"
        android:textColor="#fff"
        android:text="@string/cancle_rec"
        android:textSize="20sp"
        />
    <LinearLayout
        android:id="@+id/show_file_op"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="match_parent"
            android:id="@+id/file_opretion"
            android:layout_height="80dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="right"
            android:backgroundTint="#f24646"
            app:borderWidth="0dp"
           />
        <Button
            android:id="@+id/delete_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="删除"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="复制"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="移动"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="..."
            />
    </LinearLayout>
</LinearLayout>